--- a/Artigos/CSS/artigoPrincipal.css
+++ b/Artigos/CSS/artigoPrincipal.css
@@ -4,46 +4,54 @@ Poppins Font
 
 /* devanagari */
 @font-face {
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJbecmNE.woff2) format('woff2');
-  unicode-range: U+0900-097F, U+1CD0-1CF9, U+200C-200D, U+20A8, U+20B9, U+20F0, U+25CC, U+A830-A839, U+A8E0-A8FF, U+11B00-11B09;
+  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJbecmNE.woff2)
+    format("woff2");
+  unicode-range: U+0900-097F, U+1CD0-1CF9, U+200C-200D, U+20A8, U+20B9, U+20F0,
+    U+25CC, U+A830-A839, U+A8E0-A8FF, U+11B00-11B09;
 }
 /* latin-ext */
 @font-face {
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJnecmNE.woff2) format('woff2');
-  unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJnecmNE.woff2)
+    format("woff2");
+  unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF,
+    U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020,
+    U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
 @font-face {
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJfecg.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJfecg.woff2)
+    format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
+    U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /************************************************
 Reset
 ************************************************/
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 /************************************************
 HTML
 ************************************************/
 
 html {
-    font-family: 'Poppins';
-    scroll-behavior: smooth;
-    background-color: #FFFFFF;
-    font-size: calc(15px + 0.390625vw);
-    list-style-type: none;
+  font-family: "Poppins";
+  scroll-behavior: smooth;
+  background-color: #ffffff;
+  font-size: calc(15px + 0.390625vw);
+  list-style-type: none;
 }
 
 a {
@@ -52,7 +60,7 @@ a {
 }
 
 ul li {
-    list-style: none;
+  list-style: none;
 }
 
 /************************************************
@@ -60,23 +68,23 @@ header
 ************************************************/
 
 header {
-    object-fit: cover;
-    position: sticky;
-    top: 0;
-    padding: 0.5rem 3rem 0.5rem 3rem;
-    background-color: rgba(255, 255, 255, 0.8);
-    backdrop-filter: blur(2px);
-    z-index: 10;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  object-fit: cover;
+  position: sticky;
+  top: 0;
+  padding: 0.5rem 3rem 0.5rem 3rem;
+  background-color: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(2px);
+  z-index: 10;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 header h2 {
-    font-size: 1.5rem;
-    color: #000000;
-    font-weight: bold;
-    float: left;
+  font-size: 1.5rem;
+  color: #000000;
+  font-weight: bold;
+  float: left;
 }
 
 header .logo {
@@ -88,150 +96,149 @@ header .logo img {
   height: 2rem;
 }
 
-
-header nav ul li{
-    margin: 10px;
-    display: inline;
-    float: right;
+header nav ul li {
+  margin: 10px;
+  display: inline;
+  float: right;
 }
 
 header nav ul li a {
-    font-size: 0.8rem;
-    color: #000000;
-    text-decoration: none;
-    font-weight: normal;
+  font-size: 0.8rem;
+  color: #000000;
+  text-decoration: none;
+  font-weight: normal;
 }
 
 header nav ul li a.contato {
-    border-style: solid;
-    border-radius: 5px;
-    border-width: 0.1rem;
-    border-color: #009DFF;
-    padding: 0.2rem;
+  border-style: solid;
+  border-radius: 5px;
+  border-width: 0.1rem;
+  border-color: #009dff;
+  padding: 0.2rem;
 }
 
 header nav ul li a:hover {
-    background-color: #009DFF;
-    color: #0D1B2A;
-    transition: all 0.3s ease;
-    border-radius: 5px;
-    padding: 0.2rem;
+  background-color: #009dff;
+  color: #0d1b2a;
+  transition: all 0.3s ease;
+  border-radius: 5px;
+  padding: 0.2rem;
 }
 /************************************************
 geral
 ************************************************/
-section{
-    text-align: center;
-    padding: 0 20vw 0 20vw;
+section {
+  text-align: center;
+  padding: 0 20vw 0 20vw;
 }
 section h1 {
-    color: #0D1B2A;
-    font-size: 2rem;
-    font-weight: bold;
-    margin: 2rem 2rem 0 2rem;
-    display: inline-block;
-    border-bottom: 3px solid #009DFF;
-    padding-bottom: 5px;
+  color: #0d1b2a;
+  font-size: 2rem;
+  font-weight: bold;
+  margin: 2rem 2rem 0 2rem;
+  display: inline-block;
+  border-bottom: 3px solid #009dff;
+  padding-bottom: 5px;
 }
 section ul li h2 {
-    color: #000000;
-    font-weight: bold;
-    padding: 2rem;
+  color: #000000;
+  font-weight: bold;
+  padding: 2rem;
 }
 section div.tudo {
-    display: flex;
-    align-items: center;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-    padding: 2vw;
-    border-radius: 1vw;
+  display: flex;
+  align-items: center;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  padding: 2vw;
+  border-radius: 1vw;
 }
 section div.tudo a img {
-    width: 90%;
-    height: 280px;
-    object-fit: fill;
-    border-radius: 8px;
-    border: 2px solid #000000;
+  width: 90%;
+  height: 280px;
+  object-fit: fill;
+  border-radius: 8px;
+  border: 2px solid #000000;
 }
 section div.texto {
-    padding: 0 0 0 4rem;
-    text-align: left;
-    color: #000000;
+  padding: 0 0 0 4rem;
+  text-align: left;
+  color: #000000;
 }
 section div.texto p.button {
-    background-color: white;
-    text-align: center;
-    color: #000000;
-    border-radius: 2vw;
-    margin: 2vw 0 0 0;
-    border: 2px solid #009DFF;
+  background-color: white;
+  text-align: center;
+  color: #000000;
+  border-radius: 2vw;
+  margin: 2vw 0 0 0;
+  border: 2px solid #009dff;
 }
-section ul li div.texto p{
-    font-size: 1.vw;
+section ul li div.texto p {
+  font-size: 1vw;
 }
 section ul li {
-    color: white;
-    
+  color: white;
 }
 /************************************************
 footer
 ************************************************/
 footer {
-    background-color: white;
-    padding: 2vw 0 0 0;
+  background-color: white;
+  padding: 2vw 0 0 0;
 }
-footer div{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 1vw 3vw 0 3vw;
+footer div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1vw 3vw 0 3vw;
 }
 footer div div {
-    display: block;
+  display: block;
 }
 
 footer div div h2 {
-    font-size: 1.5vw;
+  font-size: 1.5vw;
 }
 footer div div ul li a {
-    font-size: 1vw;
+  font-size: 1vw;
 }
 footer div div p {
-    font-size: 1vw;
+  font-size: 1vw;
 }
 footer div a {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 footer div a img {
-    width: 8vw;
+  width: 8vw;
 }
 footer div div.logo img {
-   width: 5vw;
+  width: 5vw;
 }
 footer div div p {
-    margin: 10px 0;
+  margin: 10px 0;
 }
 footer div div.logo ul {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 footer div div > h2 {
-    color: #009DFF;
+  color: #009dff;
 }
 footer div div ul li {
-    margin: 10px 0;
+  margin: 10px 0;
 }
 footer div div ul li a:hover {
-    text-decoration: underline #009DFF 0.1vw;
+  text-decoration: underline #009dff 0.1vw;
 }
 footer div div p.email {
-    color: #009DFF;
+  color: #009dff;
 }
-footer div.direitos  {
-    display: flex;
-    justify-content: center;
-    padding: 10px 0 20px;
+footer div.direitos {
+  display: flex;
+  justify-content: center;
+  margin: 10px 0 15px 0;
 }
 footer div.direitos p {
-    color: gray;
+  color: gray;
+  font-size: 0.8rem;
 }
