--- a/Artigos/CSS/organização_alimentar.css
+++ b/Artigos/CSS/organização_alimentar.css
@@ -4,42 +4,49 @@ Poppins Font
 
 /* devanagari */
 @font-face {
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJbecmNE.woff2) format('woff2');
-  unicode-range: U+0900-097F, U+1CD0-1CF9, U+200C-200D, U+20A8, U+20B9, U+20F0, U+25CC, U+A830-A839, U+A8E0-A8FF, U+11B00-11B09;
+  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJbecmNE.woff2)
+    format("woff2");
+  unicode-range: U+0900-097F, U+1CD0-1CF9, U+200C-200D, U+20A8, U+20B9, U+20F0,
+    U+25CC, U+A830-A839, U+A8E0-A8FF, U+11B00-11B09;
 }
 /* latin-ext */
 @font-face {
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJnecmNE.woff2) format('woff2');
-  unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJnecmNE.woff2)
+    format("woff2");
+  unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF,
+    U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020,
+    U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
 @font-face {
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJfecg.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJfecg.woff2)
+    format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
+    U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 /************************************************
 Coolors
 ************************************************/
 
-
 /************************************************
 Reset
 ************************************************/
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 /************************************************
@@ -47,11 +54,11 @@ HTML
 ************************************************/
 
 html {
-    font-family: 'Poppins';
-    scroll-behavior: smooth;
-    background-color: #FFFFFF;
-    font-size: calc(15px + 0.390625vw);
-    list-style-type: none;
+  font-family: "Poppins";
+  scroll-behavior: smooth;
+  background-color: #ffffff;
+  font-size: calc(15px + 0.390625vw);
+  list-style-type: none;
 }
 
 a {
@@ -60,12 +67,11 @@ a {
 }
 
 main {
-    margin: 0 5vw;
+  margin: 0 5vw;
 }
 
-
 ul li {
-    list-style: none;
+  list-style: none;
 }
 
 /************************************************
@@ -73,23 +79,23 @@ header
 ************************************************/
 
 header {
-    object-fit: cover;
-    position: sticky;
-    top: 0;
-    padding: 0.5rem 3rem 0.5rem 3rem;
-    background-color: rgba(255, 255, 255, 0.8);
-    backdrop-filter: blur(2px);
-    z-index: 10;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  object-fit: cover;
+  position: sticky;
+  top: 0;
+  padding: 0.5rem 3rem 0.5rem 3rem;
+  background-color: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(2px);
+  z-index: 10;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 header h2 {
-    font-size: 1.5rem;
-    color: #000000;
-    font-weight: bold;
-    float: left;
+  font-size: 1.5rem;
+  color: #000000;
+  font-weight: bold;
+  float: left;
 }
 
 header .logo {
@@ -101,174 +107,174 @@ header .logo img {
   height: 2rem;
 }
 
-
-header nav ul li{
-    margin: 10px;
-    display: inline;
-    float: right;
+header nav ul li {
+  margin: 10px;
+  display: inline;
+  float: right;
 }
 
 header nav ul li a {
-    font-size: 0.8rem;
-    color: #000000;
-    text-decoration: none;
-    font-weight: normal;
+  font-size: 0.8rem;
+  color: #000000;
+  text-decoration: none;
+  font-weight: normal;
 }
 
 header nav ul li a.contato {
-    border-style: solid;
-    border-radius: 5px;
-    border-width: 0.1rem;
-    border-color: #009DFF;
-    padding: 0.2rem;
+  border-style: solid;
+  border-radius: 5px;
+  border-width: 0.1rem;
+  border-color: #009dff;
+  padding: 0.2rem;
 }
 
 header nav ul li a:hover {
-    background-color: #009DFF;
-    color: #0D1B2A;
-    transition: all 0.3s ease;
-    border-radius: 5px;
-    padding: 0.2rem;
+  background-color: #009dff;
+  color: #0d1b2a;
+  transition: all 0.3s ease;
+  border-radius: 5px;
+  padding: 0.2rem;
 }
-     
+
 /************************************************
 introdução
 ************************************************/
 section.introducao h2 {
-    color: #009DFF;
-    margin: 2.5rem 0;
-    text-align: center;
+  color: #009dff;
+  margin: 2.5rem 0;
+  text-align: center;
 }
-section.introducao p{
-    text-align: center;
-    margin: 0 0 2.5rem 0;
+section.introducao p {
+  text-align: center;
+  margin: 0 0 2.5rem 0;
 }
 
 /************************************************
 planejamento
 ************************************************/
 section.planejamento h3 {
-    color: #009DFF;
-    margin: 0 0 1rem 40px;
-    font-weight: bold;
+  color: #009dff;
+  margin: 0 0 1rem 40px;
+  font-weight: bold;
 }
 section.planejamento p {
-    margin: 0 0 1rem 0;
+  margin: 0 0 1rem 0;
 }
 section.planejamento h4 {
-    font-weight: bold;
-    color: #009DFF;
-    margin: 0 0 1rem 40px;
-    font-size: 1.2rem;
+  font-weight: bold;
+  color: #009dff;
+  margin: 0 0 1rem 40px;
+  font-size: 1.2rem;
 }
 
 /************************************************
 Porção
 ************************************************/
 section.porção h3 {
-    color: #009DFF;
-    margin: 1rem 0 1rem 40px;
+  color: #009dff;
+  margin: 1rem 0 1rem 40px;
 }
 section.porção > p {
-    margin: 0.5rem 0;
+  margin: 0.5rem 0;
 }
 /************************************************
 adaptação
 ************************************************/
 section.adaptação > div {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 section.adaptação div div h3 {
-    color: #009DFF;
-    margin: 1rem 0 1rem 40px;
+  color: #009dff;
+  margin: 1rem 0 1rem 40px;
 }
 section.adaptação div div p {
-    margin: 1rem 0;
+  margin: 1rem 0;
 }
 section.adaptação div div p span {
-    color: #009DFF;
+  color: #009dff;
 }
 section.adaptação p {
-    margin: 2rem 0;
+  margin: 2rem 0;
 }
 
 /************************************************
 Referências
 ************************************************/
 section.referencias h3 {
-    font-weight: normal;
-    margin: 1rem 0 1rem 40px;
+  font-weight: normal;
+  margin: 1rem 0 1rem 40px;
 }
 section.referencias ul li {
-    list-style-type: none;
-    margin:  0  0 20px 20px;
+  list-style-type: none;
+  margin: 0 0 20px 20px;
 }
 section.referencias ul li a {
-    color: #009DFF;
+  color: #009dff;
 }
 /************************************************
 Rodapé
 ************************************************/
-footer div{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 1vw 3vw 0 3vw;
+footer div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1vw 3vw 0 3vw;
 }
 footer div div {
-    display: block;
+  display: block;
 }
 footer div div a {
   text-decoration: none;
 }
 footer div div a h2 {
-    font-size: 1.5vw;
-    color: black;
-  }
+  font-size: 1.5vw;
+  color: black;
+}
 footer div div ul li a {
-    font-size: 1vw;
-    color: #000000;
-  }
-  footer div div p {
-    font-size: 1vw;
-  }
-  footer div a {
-    display: flex;
-    align-items: center;
-  }
-  footer div a img {
-    width: 8vw;
-  }
-  footer div div.logo img {
-    width: 5vw;
-  }
-  footer div div p {
-    margin: 10px 0;
-  }
-  footer div div.logo ul {
-    display: flex;
-    justify-content: space-around;
-  }
-  footer div div > h2 {
-    color: #009DFF;
-  }
-  footer div div ul li {
-    margin: 10px 0;
-    list-style-type: none;
-  }
+  font-size: 1vw;
+  color: #000000;
+}
+footer div div p {
+  font-size: 1vw;
+}
+footer div a {
+  display: flex;
+  align-items: center;
+}
+footer div a img {
+  width: 8vw;
+}
+footer div div.logo img {
+  width: 5vw;
+}
+footer div div p {
+  margin: 10px 0;
+}
+footer div div.logo ul {
+  display: flex;
+  justify-content: space-around;
+}
+footer div div > h2 {
+  color: #009dff;
+}
+footer div div ul li {
+  margin: 10px 0;
+  list-style-type: none;
+}
 
 footer div div ul li a:hover {
-    text-decoration: underline #009DFF 0.1vw;
+  text-decoration: underline #009dff 0.1vw;
 }
 footer div div p.email {
-    color: #009DFF;
+  color: #009dff;
 }
 footer div.direitos  {
     display: flex;
     justify-content: center;
-    margin: 10px 0 20px;
+    margin: 10px 0 15px 0;
 }
 footer div.direitos p {
     color: gray;
+    font-size: 0.8rem;
 }
