--- a/Artigos/CSS/style-beneficios.css
+++ b/Artigos/CSS/style-beneficios.css
@@ -257,18 +257,14 @@ footer div div p.email {
 footer div.direitos  {
     display: flex;
     justify-content: center;
-    padding: 10px 0 20px;
+    margin: 10px 0 15px 0;
 }
 footer div.direitos p {
     color: gray;
+    font-size: 0.8rem;
 }
+
+
 /************************************************
 celular
 ************************************************/
-@media only screen and (max-width: 920px) {
-    header {
-    padding: 0.5rem 0rem 0.5rem 0rem;
-    
-}
-
-}
