--- a/style.css
+++ b/style.css
@@ -428,8 +428,9 @@ footer div div p.email {
 footer div.direitos  {
     display: flex;
     justify-content: center;
-    margin: 10px 0 20px;
+    margin: 10px 0 15px 0;
 }
 footer div.direitos p {
     color: gray;
+    font-size: 0.8rem;
 }
