--- a/Sobre-o-projeto/css/sobreProjeto.css
+++ b/Sobre-o-projeto/css/sobreProjeto.css
@@ -197,6 +197,10 @@ a {
   color: black;
 }
 
+p {
+  margin: 30px;
+}
+
 main {
   text-align: center;
 }
@@ -239,25 +243,42 @@ main h2 {
   padding-bottom: 5px;
 }
 
-main .sobre p {
-  margin: 40px;
-}
-
-.colab ul li p img {
-  padding: 5px;
-  height: 20rem;
-  border-radius: 0.6rem;
-}
-
+/************************************************
+  Colaboradores
+************************************************/
 .colab .dupla {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;  /* centraliza no meio da tela */
+  align-items: flex-start;
+  gap: 9rem;                
+  margin-bottom: 2rem;      
 }
 
+/* Cada item da dupla */
+.colab .dupla li {
+  flex: 0 0 auto;
+  text-align: center;
+  max-width: 700px;
+}
+
+/* Imagens com mesmo tamanho */
+.colab .dupla li img,
 .imagem {
-  width: 600px;
-  height: auto;
-  border-color: solid 1px #009dff;
+  width: 500px;
+  height: 500px;
+  object-fit: cover;
+  border-radius: 0.6rem;
+  padding: 5px;
+  display: block;
+  margin: 0 auto 1rem;
+}
+
+
+.colab .dupla li strong {
+  display: block;
+  margin-bottom: 0.5rem;
+  font-weight: bold;
+  color: #0d1b2a;
 }
 
 /************************************************
