--- a/Artigos/CSS/alimentaçãoEquilibrada.css
+++ b/Artigos/CSS/alimentaçãoEquilibrada.css
@@ -213,71 +213,69 @@ p {
 /************************************************
 Footer
 ************************************************/
-footer div {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 1vw 3vw 0 3vw;
+footer div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 1vw 3vw 0 3vw;
 }
 footer div div {
-  display: block;
-}
-footer div div a {
-  text-decoration: none;
-}
-footer div div a h2 {
-  font-size: 1.5vw;
-  color: black;
-}
-footer div div ul li a {
-  font-size: 1vw;
-  color: #000000;
-}
-footer div div p {
-  font-size: 1vw;
-}
-footer div a {
-  display: flex;
-  align-items: center;
-}
-footer div a img {
-  width: 8vw;
-}
-footer div div.logo img {
-  width: 5vw;
-}
-footer div div p {
-  margin: 10px 0;
-}
-footer div div.logo ul {
-  display: flex;
-  justify-content: space-around;
-}
-footer div div > h2 {
-  color: #009dff;
-}
-footer div div ul li {
-  margin: 10px 0;
-  list-style-type: none;
+    display: block;
 }
 
+footer div div h2 {
+    font-size: 1.5vw;
+}
+footer div div ul li a {
+    font-size: 1vw;
+}
+footer div div p {
+    font-size: 1vw;
+}
+footer div a {
+    display: flex;
+    align-items: center;
+}
+footer div a img {
+    width: 8vw;
+}
+footer div div.logo img {
+   width: 5vw;
+}
+footer div div p {
+    margin: 10px 0;
+}
+footer div div.logo ul {
+    display: flex;
+    gap: 0.5rem;
+}
+
+footer div div.logo ul span {
+    font-size: 1.1rem;
+}
+footer div div > h2 {
+    color: #009DFF;
+}
+footer div div ul li {
+    margin: 10px 0;
+}
 footer div div ul li a:hover {
-  text-decoration: underline #009dff 0.1vw;
+    text-decoration: underline #009DFF 0.1vw;
 }
 footer div div p.email {
-  color: #009dff;
+    color: #009DFF;
 }
-footer div.direitos {
-  display: flex;
-  justify-content: center;
-  margin: 10px 0 15px 0;
+footer div.direitos  {
+    display: flex;
+    justify-content: center;
+    margin: 10px 0 15px 0;
 }
 footer div.direitos p {
-  color: gray;
-  font-size: 0.8rem;
+    color: gray;
+    font-size: 0.8rem;
 }
 
 footer a {
-  text-decoration: none;
-  color: black;
+    text-decoration: none;
+    color: black;
 }
