--- a/Artigos/CSS/style-beneficios.css
+++ b/Artigos/CSS/style-beneficios.css
@@ -199,9 +199,6 @@ section ul li:hover {
 /************************************************
 footer
 ************************************************/
-footer {
-    background-color: white;
-}
 footer div{
     display: flex;
     justify-content: space-between;
@@ -236,7 +233,11 @@ footer div div p {
 }
 footer div div.logo ul {
     display: flex;
-    justify-content: space-around;
+    gap: 0.5rem;
+}
+
+footer div div.logo ul span {
+    font-size: 1.1rem;
 }
 footer div div > h2 {
     color: #009DFF;
