--- a/Artigos/CSS/artigoPrincipal.css
+++ b/Artigos/CSS/artigoPrincipal.css
@@ -49,7 +49,7 @@ HTML
 html {
   font-family: "Poppins";
   scroll-behavior: smooth;
-  background-color: #ffffff;
+  background-color: #f7f7f7;
   font-size: calc(15px + 0.390625vw);
   list-style-type: none;
 }
@@ -72,7 +72,7 @@ header {
   position: sticky;
   top: 0;
   padding: 0.5rem 3rem 0.5rem 3rem;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: #FFFFFF;
   backdrop-filter: blur(2px);
   z-index: 10;
   display: flex;
