--- a/Sobre-o-projeto/css/sobreProjeto.css
+++ b/Sobre-o-projeto/css/sobreProjeto.css
@@ -246,26 +246,23 @@ main h2 {
 /************************************************
   Colaboradores
 ************************************************/
+section.colaboradores div.colab ul.dupla li {
+  padding: 0 3rem 2rem 3rem;      
+}
 .colab .dupla {
   display: flex;
   justify-content: center;  /* centraliza no meio da tela */
   align-items: flex-start;
-  gap: 9rem;                
-  margin-bottom: 2rem;      
+  gap: 2rem;                
+  
 }
 
-/* Cada item da dupla */
-.colab .dupla li {
-  flex: 0 0 auto;
-  text-align: center;
-  max-width: 700px;
-}
 
 /* Imagens com mesmo tamanho */
 .colab .dupla li img,
 .imagem {
-  width: 500px;
-  height: 500px;
+  width: 20rem;
+  height: 20rem;
   object-fit: cover;
   border-radius: 0.6rem;
   padding: 5px;
