--- a/FitlyApp/Artigos/CSS/organização_alimentar.css
+++ b/FitlyApp/Artigos/CSS/organização_alimentar.css
@@ -7,29 +7,28 @@ Poppins Font
   font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJbecmNE.woff2)
-    format("woff2");
+  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJbecmNE.woff2) format("woff2");
   unicode-range: U+0900-097F, U+1CD0-1CF9, U+200C-200D, U+20A8, U+20B9, U+20F0,
     U+25CC, U+A830-A839, U+A8E0-A8FF, U+11B00-11B09;
 }
+
 /* latin-ext */
 @font-face {
   font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJnecmNE.woff2)
-    format("woff2");
+  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJnecmNE.woff2) format("woff2");
   unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF,
     U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020,
     U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
+
 /* latin */
 @font-face {
   font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJfecg.woff2)
-    format("woff2");
+  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJfecg.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
     U+2212, U+2215, U+FEFF, U+FFFD;
@@ -38,20 +37,7 @@ Poppins Font
 /************************************************
 Coolors
 ************************************************/
-:root{
-  --color-background:  #f7f7f7;
-  --color-text:#333333;
-}
-p,strong, a {
-  color: var(--color-text);
-}
-li {
-  color: var(--color-background);
 
-}
-body {
-  background-color: var(--color-background);
-}
 /************************************************
 Reset
 ************************************************/
@@ -87,6 +73,10 @@ ul li {
   list-style: none;
 }
 
+body {
+  color: #333333;
+}
+
 p {
   line-height: 1.7;
 }
@@ -96,30 +86,63 @@ p {
 /************************************************
 header
 ************************************************/
-header nav {
+
+header {
+  object-fit: cover;
+  position: sticky;
+  top: 0;
+  padding: 0.5rem 3rem 0.5rem 3rem;
+  background-color: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(2px);
+  z-index: 10;
   display: flex;
-}
-header nav button {
-  font-size: 1.5rem;
+  justify-content: space-between;
   align-items: center;
-  background-color: transparent;
-  border: 0;
-  margin: 0 1.5rem;
 }
-header nav button:hover {
-  color:#009dff;
-  transition: all 0.3s ease;
-  border-radius: 5px;
+
+header h2 {
+  font-size: 1.5rem;
+  color: #000000;
+  font-weight: bold;
+  float: left;
 }
-header nav button span#lua {
-  display: block;
+
+header .logo {
+  display: flex;
+  align-items: center;
 }
-header nav button span#sol {
-  display: none;
+
+header .logo img {
+  height: 2rem;
 }
+
 header nav ul li {
   margin: 10px;
   display: inline;
+  float: right;
+}
+
+header nav ul li a {
+  font-size: 0.8rem;
+  color: #000000;
+  text-decoration: none;
+  font-weight: normal;
+}
+
+header nav ul li a.contato {
+  border-style: solid;
+  border-radius: 5px;
+  border-width: 0.1rem;
+  border-color: #009dff;
+  padding: 0.2rem;
+}
+
+header nav ul li a:hover {
+  background-color: #009dff;
+  color: #0d1b2a;
+  transition: all 0.3s ease;
+  border-radius: 5px;
+  padding: 0.2rem;
 }
 
 
@@ -132,6 +155,7 @@ section.introducao h2 {
   text-align: center;
   font-size: 2rem;
 }
+
 section.introducao p {
   text-align: left;
   margin: 0 0 2.5rem 0;
@@ -144,82 +168,138 @@ planejamento
 ************************************************/
 
 
- section.planejamento h3 {
+section.planejamento h3 {
   color: #009dff;
   margin: 0 0 1rem 40px;
   font-weight: bold;
 }
- section.planejamento p {
+
+section.planejamento p {
   margin: 0 0 1rem 0;
 }
- section.planejamento h4 {
+
+section.planejamento h4 {
   font-weight: bold;
   color: #333333;
   margin: 0 0 1rem 40px;
   font-size: 1.2rem;
 }
+section.planejamento h3:before {
+  content: '➤ ';
+  font-weight: bold;
+  color: #009dff;
+  margin-right: 0.5rem; 
+}
+
 /************************************************
 Dicas práticas 
 ************************************************/
 div.texto_e_video {
   display: flex;
 }
+
 div.texto_e_video div iframe {
   margin: 20px auto;
-  
+
 }
+
 section.dicas h4 {
   font-weight: bold;
   color: #009dff;
   margin: 0 0 1rem 40px;
   font-size: 1.2rem;
-  
 }
+section.dicas h4:before {
+  content: '➤ ';
+  font-weight: bold;
+  color: #009dff;
+  margin-right: 0.5rem;
+}
+
 section.dicas p {
   margin: 0 0 1rem 0;
 }
+
+section.dicas ul li {
+  margin: 0.5rem 0;
+  color: #333333;
+}
+
+section.dicas ul li:before {
+  content: '✓';
+  color: #009dff;
+  margin-right: 0.5rem;
+}
+section.dicas ul {
+  margin : 0 0 1vw 45px;
+}
+
 /************************************************
 Porção
 ************************************************/
 section.porção {
   justify-content: space-around;
 }
+
 section.porção h3 {
   color: #009dff;
   margin: 1rem 0 1rem 40px;
 }
+section.porção h3:before {
+  content: '➤ ';
+  font-weight: bold;
+  color: #009dff;
+  margin-right: 0.5rem; 
+}
+
 section.porção ul li {
   margin: 0.5rem 0;
 }
+
 section.porção p {
   margin: 0.5rem 0;
 }
-div.texto_e_video div.video p{
+
+div.texto_e_video div.video p {
   text-align: center;
 }
+ div.texto_e_video div iframe {
+  margin: 0vw 5vw 0 10vw;
+  width: 325px;
+  height: 600px;
+}
+section.porção ul, section.porção p {
+  margin: 0 0 1vw 45px;
+}
+
 /************************************************
 adaptação
 ************************************************/
-section.adaptação > div {
+section.adaptação>div {
   display: flex;
   justify-content: space-between;
 }
+
 section.adaptação div div h3 {
   color: #009DFF;
   margin: 1rem 0 1rem 40px;
 }
+
 section.adaptação div div p {
   margin: 1rem 0;
 }
+
 section.adaptação div div p span {
   color: #009DFF;
   font-size: 1.2rem;
 }
+
 section.adaptação p {
   margin: 2rem 0;
 }
-section.adaptação p.dica-extra {  
-  color: #333333; 
+
+section.adaptação p.dica-extra {
+  background-color: #e6f5ff;
   border-left: 4px solid #009dff;
   padding: 15px;
   margin: 20px 0;
@@ -228,10 +308,11 @@ section.adaptação p.dica-extra {
 
 section.adaptação p.dica-extra span {
   font-weight: bold;
-  color: #007acc; 
+  color: #007acc;
 }
-section.adaptação p.dica-extra {  
-  background-color: #e6f5ff; 
+
+section.adaptação p.dica-extra {
+  background-color: #e6f5ff;
   border-left: 4px solid #009dff;
   padding: 15px;
   margin: 20px 0;
@@ -240,90 +321,143 @@ section.adaptação p.dica-extra {
 
 section.adaptação p.dica-extra span {
   font-weight: bold;
-  color: #007acc; 
+  color: #007acc;
 }
+section.adaptação img {
+  width: 70%;
+  border-radius: 10px;
+  margin: 3vw 0 0 0;
+}
+section.adaptação h3:before {
+  content: '➤ ';
+  font-weight: bold;
+  color: #009dff;
+  margin-right: 0.5rem; 
+}
+section.adaptação div div p.dicas-adaptação {
+  font-weight: bold;
+  margin: 0 0 1vw 45px;
+}
+section.adaptação div div ul {
+  margin : 0 0 1vw 55px;
+}
+section.adaptação div div ul li p:before {
+  content: '✓';
+  color: #009dff;
+  margin-right: 0.5rem;
+}
+section.adaptação > p {
+  font-style: italic;
+}
+
+
 /************************************************
 Referências
 ************************************************/
 section.referencias h3 {
-  font-weight: normal;
+  font-weight: bold;
   margin: 1rem 0 1rem 40px;
 }
+
 section.referencias ul li {
   list-style-type: none;
   margin: 0 0 20px 20px;
 }
+
 section.referencias ul li a {
   color: #009dff;
 }
+section.referencias ul li a:hover {
+  text-decoration: underline #009dff 0.1vw;
+}
+section.referencias h3:before {
+  content: '➤ ';
+  font-weight: bold;
+  color: #333333;
+  margin-right: 0.5rem; 
+}
+
 /************************************************
 Rodapé
 ************************************************/
-footer {
-  padding:1vw 3vw 0 3vw ;
-  background-color: rgba(255, 255, 255, 0.8);
-}
 footer div {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 2vw;
+}
+
+footer div div {
+  display: block;
+}
+
+footer div div h2 {
+  font-size: 1.5vw;
+}
+
+footer div div ul li a {
+  font-size: 1vw;
+}
+
+footer div div p {
+  font-size: 1vw;
+}
+
+footer div a {
+  display: flex;
+  align-items: center;
 }
 
 footer div a img {
   width: 8vw;
 }
-footer div div {
-  display: block;
-}
-footer div div.logo, div.contact, div.mapSite {
-  min-height: 24vw;
-  /*Alinha todas as Divs, e por consequências, os títulos*/
-}
-footer div div h2 {
-  font-size: 1.5rem;
-}
-footer div div ul li a {
-  font-size: 0.8rem;
-}
-footer div div p {
-  font-size: 0.8rem;
-  color: black;
-}
+
 footer div div.logo img {
   width: 5vw;
 }
+
 footer div div p {
   margin: 10px 0;
 }
+
 footer div div.logo ul {
   display: flex;
-  align-items: center;
-}
-footer div div.logo ul li {
-  display: flex;
-  align-items: center;
+  gap: 0.5rem;
 }
 
-footer div div > h2 {
-  color: #009dff;
+footer div div.logo ul span {
+  font-size: 1.1rem;
 }
-footer div div ul li > a {
+
+footer div div>h2 {
+  color: #009DFF;
+}
+
+footer div div ul li {
   margin: 10px 0;
 }
+
 footer div div ul li a:hover {
-  text-decoration: underline #009dff 0.1vw;
+  text-decoration: underline #009DFF 0.1vw;
 }
+
 footer div div p.email {
-  color: #009dff;
+  color: #009DFF;
 }
+
 footer div.direitos {
   display: flex;
   justify-content: center;
+  margin: 10px 0 15px 0;
 }
+
 footer div.direitos p {
   color: gray;
   font-size: 0.8rem;
+}
+
+footer a {
+  text-decoration: none;
+  color: black;
 }
 
 
@@ -339,20 +473,23 @@ footer div.direitos p {
 
 @media (max-width: 700px) {
   .container {
-    flex-direction: column; 
+    flex-direction: column;
   }
 
   section.introducao h2 {
     font-size: 1.2rem;
   }
+
   section.introducao p {
     font-size: 0.9rem;
     text-align: justify;
   }
+
   section.planejamento h3 {
     font-size: 1.1rem;
     text-align: justify;
   }
+
   div.texto_e_video {
     flex-direction: column;
     align-items: center;
@@ -364,12 +501,13 @@ footer div.direitos p {
     width: 100%;
     text-align: center;
   }
+
   div.texto_e_video div iframe {
     width: 100%;
     max-width: 350px;
     aspect-ratio: 315 / 560;
-    height: auto; 
+    height: auto;
   }
 
-  
+
 }
