--- a/FitlyApp/base.css
+++ b/FitlyApp/base.css
@@ -50,7 +50,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 60px; /* Altura fixa para o cabeçalho */
+  height: 60px;
 }
 
 header h2 {
