--- a/FitlyApp/Artigos/css/style-beneficios.css
+++ b/FitlyApp/Artigos/css/style-beneficios.css
@@ -1,4 +1,30 @@
 
+:root {
+  --color-background: #f7f7f7;
+  --color-text: #2e2e2e;
+}
+
+
+/************************************************
+HTML
+************************************************/
+
+main p,
+strong,
+a {
+  color: var(--color-text);
+}
+
+li {
+  color: var(--color-background);
+
+}
+
+body {
+  background-color: var(--color-background);
+}
+
+
 /************************************************
 geral
 ************************************************/
@@ -7,7 +33,7 @@ section {
 }
 
 section h1 {
-    color: #0D1B2A;
+    color: var(--color-text);
     font-size: 2rem;
     font-weight: bold;
     margin: 2rem;
@@ -30,7 +56,6 @@ section ul {
 }
 
 section p {
-    color: #2e2e2e;
     font-size: 20px;
     text-align: left;
 }
@@ -44,13 +69,15 @@ section ul li h2 {
 section ul li {
     flex-direction: column;
     align-items: center;
-    background-color: white;
     border: 2px;
     border-radius: 10px;
     margin: 0 1rem 0 1rem;
     width: 30%;
     transition: all 0.3s ease;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+}
+section ul li h2 {
+    color: var(--color-text);
 }
 
 section ul li img {
